integrate bootstrap for a switch component, modify some spacing, fix some react-specific syntax errors

--- a/src/styles/cards.css
+++ b/src/styles/cards.css
@@ -17,6 +17,10 @@
 	margin-bottom: 1.5rem;
 }
 
+.letter-details p {
+  margin: 0 auto;
+}
+
 .flash-letters {
 	font-size: var(--flashcard-letter-size);
 }
